@@ -1,3 +1,8 @@
+2003-01-03  J. Brobecker  <brobecker@gnat.com>
+
+	* mdebugread.c (parse_symbol): Count until the stEnd matching
+	the structure name.
+
 2003-01-02  Mark Kettenis  <kettenis@gnu.org>
 
 	* configure.in: Remove --with-cpu option.
